--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.username=root
 jdbc.password=root
-jdbc.url=jdbc:mysql://localhost:3306/manager?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+jdbc.url=jdbc:mysql://localhost:3306/project?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 jdbc.driver=com.mysql.cj.jdbc.Driver
